AutoSelect AddOption CheckBox On New Addition

--- a/src/app/transcribe/addOption/addOption.component.html
+++ b/src/app/transcribe/addOption/addOption.component.html
@@ -3,5 +3,5 @@
       <input type="radio" class="chkbox-input" id="other{{title}}" name="{{title}}" (change)="onSelectionChange(true)">
       <span></span>
   </label>
-  <input type="text" name="other{{title}}" placeholder="Add option..." (input)="onInputChange($event)">
+  <input type="text" class="option" name="other{{title}}" placeholder="Add option..." (input)="onInputChange($event)">
 </div>
