--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,12 @@
 <div id="container">
   <div id="innerContainer">
     <span id="textWrapper">
-      <span id="valueProp">Streamlining Tag Discovery</span>
+      <span id="valueProp">Streamline Tag Discovery</span>
       <br>
       <span id="desc">
-        Crowd Tagging is an application that allows you to tag books without all the
-        headaches that usually accompany the task. You can label key characteristics of any
-        book in our database with ease. You have the option of voting on preexisting
-        transcriptions or adding your very own.
+        The efficient book-cataloguing solution that librarians trust. 
+        Crowdsourced transcriptions from domain experts provide accurate metadata. 
+        Flexible data export functionality allows integration into any system.
       </span>
     </span>
     <button *ngIf="user; else loginTemplate" routerLink="transcribe">Continue Tagging</button>
