--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -36,12 +36,16 @@ button {
     width: 15%;
     height: 15%;
     min-height: 50px;
-    min-width: 170px;
+    min-width: 185px;
     align-self: center;
     background-color: #495867;
     color: #f0f3f5;
     border-radius: 10px;
     border-style: none;
     box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25); 
-    font-size: 1.5rem;
+    font-size: 2rem;
+}
+
+.continue {
+    min-width: 230px;
 }
