--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <img src="../../assets/CTlogo.png" id="logo">
         <div id="brandPlusProp" *ngIf="router.url != '/'; else propTemplate">
           <span id="brand">Crowd Tagging</span>
-          <span id="valueProp">Streamlining Tag Discovery</span>
+          <span id="valueProp">Streamline Tag Discovery</span>
         </div>
       </a>
     </div>
