--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -6,7 +6,10 @@ img {
     min-height: 200px;
 }
 
-button {
+label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 70%;
     height: 10%;
     min-height: 30px;
