--- a/src/app/transcribe/addOption/addOption.component.html
+++ b/src/app/transcribe/addOption/addOption.component.html
@@ -1,5 +1,5 @@
 <label class="chkbox-label" for="other{{title}}">
-    <input type="radio" class="chkbox-input" id="other{{title}}" name="{{title}}" (change)="onSelectionChange(true)">
+    <input type="radio" class="chkbox-input" id="other{{title}}" name="{{title}}">
     <span></span>
 </label>
-<input type="text" class="option" name="other{{title}}" placeholder="Add option..." (input)="onInputChange($event)">
+<input type="text" class="option" name="other{{title}}" placeholder="Add option...">
