User Progress Now Saves

--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -14,7 +14,7 @@
   </div>
   <div id="options">
     <form onsubmit="return false">
-      <!-- Title Dataset-->
+      <!-- Langauge Dataset-->
       <div class="dataSet">
         <app-title title="Language"></app-title>
         <div class="data">
@@ -45,6 +45,7 @@
         </div>
         </div>
 
+        <!-- Title Dataset-->
         <div class="dataSet">
         <app-title title="Title"></app-title>
         <div class="data">
